<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cases"
            android:title="@string/menu_cases" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_prevention"
            android:title="@string/menu_prevention" />
        <item
            android:id="@+id/nav_symptoms"
            android:title="@string/menu_symptoms" />
        <item
            android:id="@+id/nav_treatment"
            android:title="@string/menu_treatment" />
    </group>

</menu>
