<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="Cases"
    app:startDestination="@+id/nav_cases">

    <fragment
        android:id="@+id/nav_cases"
        android:name="com.grace.covid_19kenya.ui.cases.cases"
        android:label="@string/menu_cases"
        tools:layout="@layout/fragment_cases" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.grace.covid_19kenya.ui.history.history"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_prevention"
        android:name="com.grace.covid_19kenya.ui.prevention.prevention"
        android:label="@string/menu_prevention"
        tools:layout="@layout/fragment_prevention" />

    <fragment
        android:id="@+id/nav_symptoms"
        android:name="com.grace.covid_19kenya.ui.symptoms.symptoms"
        android:label="@string/menu_symptoms"
        tools:layout="@layout/fragment_symptoms" />

    <fragment
        android:id="@+id/nav_treatment"
        android:name="com.grace.covid_19kenya.ui.treatment.treatment"
        android:label="@string/menu_treatment"
        tools:layout="@layout/fragment_treatment" />

</navigation>