<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/kenya"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reported"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/kenya_reported"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="50"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/kenya_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/kenya_deaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/world"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="30dp">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reported"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/world_reported"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="797490"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/world_recovered"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="161542"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:textSize="16sp"
                        android:layout_marginBottom="20dp"/>

                    <TextView
                        android:id="@+id/world_death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="38540"
                        android:textSize="16sp"
                        />

                </LinearLayout>

            </LinearLayout>

        <Button
            android:id="@+id/Refresh"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/refresh"
            android:background="@color/buttonColor"/>

</LinearLayout>